--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,13 +1,5 @@
 <main>
-
-  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center mi-boton-rc">
-
-    <div class="col-md-6 p-lg-5 mx-auto my-5">
-      
-      <h1 class="display-3 fw-bold">Bienvenido a Siempre Bella</h1>
-      <img style="max-width:300px;" src="/assets/img/Chica portada 1.png" alt="Modelo - portada">
-      <h3 class="fw-normal text-muted mb-3">Espacio de ESTILO y BELLEZA</h3>
-    </div>
-    
-  </div>
+ <div>
+  <img src="/assets/img/logo_bastbeauty.png" class="img-fluid max-width: 100% height: auto" alt="logo_bastbeauty">
+ </div>
 </main>
