--- a/frontend/src/app/treatment-detail/treatment-detail.component.html
+++ b/frontend/src/app/treatment-detail/treatment-detail.component.html
@@ -99,7 +99,7 @@
                           Categorias
                         </h3>
                         @for (category of categories; track category.id) {
-                          <p>{{ treatment.categories?.name }}</p>
+                          <p>{{ category.name }}</p>
                         }
 
                       </div>
