--- a/frontend/src/app/booking-detail/booking-detail.component.html
+++ b/frontend/src/app/booking-detail/booking-detail.component.html
@@ -148,9 +148,8 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-12">
-      <h2 class="mt-5">Comentarios y valoraciones</h2>
-      <div>
+      <div class="col-md-6">
+        <h2 class="mt-5">Valoraciones</h2>
         <ul class="list-unstyled">
           @for (comment of comments; track comment.id) {
             <li>
@@ -163,7 +162,7 @@
                         <i class="bi-star{{ fill === 100 ? '-fill' : '' }} fs-3" style="color:#ffb900;"></i>
                       </ng-template>
                     </ngb-rating>
-                    {{comment.rating| date:'dd/MM/yyyy'}}
+                    {{comment.rating | date:'dd/MM/yyyy'}}
                   </h6>
                   <small class="text-body-secondary">{{comment.opinion}}</small>
                 </div>
@@ -172,12 +171,12 @@
           }
         </ul>
       </div>
-      <div class="col-6">
+      <div class="col-md-6">
         <h2 class="mt-5">Añade un comentario</h2>
         <form [formGroup]="commentsForm" (ngSubmit)="save()">
 
           <div class="mb-3">
-            <ngb-rating  formControlName="score" [max]="5">
+            <ngb-rating  formControlName="rating" [max]="5">
               <ng-template let-fill="fill" let-index="index">
                 <i class="bi-star{{ fill === 100 ? '-fill' : '' }} fs-3" style="color:#780a99;"></i>
               </ng-template>
@@ -186,13 +185,12 @@
 
           <div class="form-floating">
             <textarea class="form-control" placeholder="Leave a comment here"
-            id="comment" formControlName="comment" style="min-height:150px;"></textarea>
-            <label for="comment">Comentario de texto</label>
+            id="opinion" formControlName="opinion" style="min-height:150px;"></textarea>
+            <label for="opinion">Comentario de texto</label>
           </div>
 
           <button class="w-100 btn btn-success btn-lg" type="submit">Añadir comentario</button>
         </form>
       </div>
-    </div>
   </div>
 </div>
