--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,60 +1,21 @@
-<footer class="py-3 my-4">
-  
-  <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 bg-custom">
-    <p>© 2024 Company, Inc. All rights reserved.</p>
-
-    <ul class="nav justify-content-center fw-bold fs-4 pb-3 mb-3">
-      <li class="nav-item">
-        <a href="#" class="nav-link px-2 text-body-secondary" _msttexthash="59059" _msthash="14"> Inicio</a>
-      </li>
-      <li class="nav-item">
-        <a href="companies" class="nav-link px-2 text-body-secondary" _msttexthash="136006" _msthash="15"> Tratamientos </a>
-      </li>
-      <li class="nav-item">
-        <a href="treatments" class="nav-link px-2 text-body-secondary" _msttexthash="95589" _msthash="16">Categorías</a>
-      </li>
-      <li class="nav-item">
-        <a href="categories" class="nav-link px-2 text-body-secondary" _msttexthash="425438" _msthash="17">Centros</a>
-      </li>
-      <li class="nav-item">
-        <a href="comments" class="nav-link px-2 text-body-secondary" _msttexthash="425438" _msthash="17">Comentarios</a>
-      </li>
-    </ul>
-
-    <ul class="list-unstyled d-flex">
-      <li class="ms-3">
-        <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
-          <i class="bi bi-whatsapp fs-2"></i>
-        </a>
-      </li>
-      <li class="ms-3">
-        <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
-          <i class="bi bi-facebook fs-2"></i>
-        </a>
-      </li>
-
-      <li class="ms-3">
-        <a class="link-body-emphasis" href="https://www.treatwell.es/" target="_blank">
-          <i class="bi bi-instagram fs-2"></i>
-        </a>
-      </li>
-
-      <li class="ms-3">
-        <a class="link-body-emphasis" href="https://www.treatwell.es/" target="_blank">
-          <i class="bi bi-tiktok fs-2"></i>
-        </a>
-      </li>
-      <li class="ms-3">
-        <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
-          <i class="bi bi-twitter-x fs-2"></i>
-        </a>
-      </li>
-
-      <li class="ms-3">
-        <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
-          <i class="bi bi-linkedin fs-2"></i>
-        </a>
-      </li>
-    </ul>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Información de contacto</h3>
+        <p>Dirección: 123 Calle Principal, Ciudad, País</p>
+        <p>Teléfono: +1234567890</p>
+        <p>Email: infoexample.com</p>
+      </div>
+      <div class="col-md-6">
+        <h3>Enlaces rápidos</h3>
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Acerca de nosotros</a></li>
+          <li><a href="#">Servicios</a></li>
+          <li><a href="#">Contacto</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
 </footer>
