--- a/frontend/src/app/navbar/navbar.component.css
+++ b/frontend/src/app/navbar/navbar.component.css
@@ -3,6 +3,11 @@
     color: #ffffff; /* Color del texto blanco */
     /* Otros estilos según sea necesario */
 }
-.bg-custom {
-    background-color:#FDD0B8; 
+.container-fluid {
+  background-color: rgba(238, 125, 5, 0.95);
 }
+.navbar {
+  background-color: rgba(238, 125, 5, 0.95);
+  padding: 0px;
+}
+
