--- a/frontend/src/app/footer/footer.component.css
+++ b/frontend/src/app/footer/footer.component.css
@@ -1,3 +1,7 @@
 .bg-custom {
-    background-color:#FDD0B8; 
+    background-color:rgba(238, 125, 5, 0.95);
+}
+.footer {
+  background-color: rgba(238, 125, 5, 0.95);
+  padding: 0px;
 }
