--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,21 +1,42 @@
-<footer>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h3>Información de contacto</h3>
-        <p>Dirección: 123 Calle Principal, Ciudad, País</p>
-        <p>Teléfono: +1234567890</p>
-        <p>Email: infoexample.com</p>
-      </div>
-      <div class="col-md-6">
-        <h3>Enlaces rápidos</h3>
-        <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Acerca de nosotros</a></li>
-          <li><a href="#">Servicios</a></li>
-          <li><a href="#">Contacto</a></li>
-        </ul>
-      </div>
-    </div>
+<footer class="">
+
+  <div class="d-flex flex-column flex-sm-row justify-content-center justify-content-sm-between align-items-center bg-custom">
+    <p class="text-center text-sm-start">© 2024 Company, Inc. All rights reserved.</p>
+
+    <ul class="list-unstyled d-flex justify-content-center justify-content-sm-end align-items-center">
+      <li class="ms-3">
+        <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
+          <i class="bi bi-whatsapp fs-2"></i>
+        </a>
+      </li>
+      <li class="ms-3">
+        <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
+          <i class="bi bi-facebook fs-2"></i>
+        </a>
+      </li>
+
+      <li class="ms-3">
+        <a class="link-body-emphasis" href="https://www.treatwell.es/" target="_blank">
+          <i class="bi bi-instagram fs-2"></i>
+        </a>
+      </li>
+
+      <li class="ms-3">
+        <a class="link-body-emphasis" href="https://www.treatwell.es/" target="_blank">
+          <i class="bi bi-tiktok fs-2"></i>
+        </a>
+      </li>
+      <li class="ms-3">
+        <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
+          <i class="bi bi-twitter-x fs-2"></i>
+        </a>
+      </li>
+
+      <li class="ms-3">
+        <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
+          <i class="bi bi-linkedin fs-2"></i>
+        </a>
+      </li>
+    </ul>
   </div>
 </footer>
