--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,5 +1,7 @@
 <main>
- <div>
-  <img src="/assets/img/logo_bastbeauty.png" class="img-fluid max-width: 100% height: auto" alt="logo_bastbeauty">
- </div>
+  <div>
+    <img src="/assets/img/logo_bastbeauty.png" class="img-fluid"
+    style="object-fit: cover; width: 100vw; height: 100vh;" alt="logo_bastbeauty">
+  </div>
 </main>
+
