Cambio color de fondo en main, treatment, booking

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -83,10 +83,14 @@
 					</div>
 				</li>
         <li class="nav-item">
-          <button type="button" class="btn mi-boton-rc me-3 mb-2" routerLink="/login">Login</button>
+          <button type="button" class="btn mi-boton-rc me-3 mb-2" routerLink="/login">
+            Login <i class="bi bi-box-arrow-right ms-2"></i>
+          </button>
         </li>
         <li class="nav-item">
-          <button type="button" class="btn mi-boton-rc me-2 mb-2" routerLink="/register">Registro</button>
+          <button type="button" class="btn mi-boton-rc me-2 mb-2" routerLink="/register">
+            Registro <i class="bi bi-person-plus ms-2"></i>
+          </button>
         </li>
       </ul>
 
