--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
 
-<main style="min-height:500px;">
+<main style="min-height:500px;" class="container-fluid">
   <router-outlet></router-outlet>
 </main>
 
