--- a/frontend/src/app/treatment-list/treatment-list.component.html
+++ b/frontend/src/app/treatment-list/treatment-list.component.html
@@ -2,13 +2,13 @@
   <div class="row">
     <div class="col-12">
 
-      <h1 class="mt-5 text-center text-primary-emphasis">Listado de Tratamientos <i class="bi bi-person-hearts"></i></h1>
+      <h1 class="mt-4 mb-4 text-center text-primary-emphasis">Listado de Tratamientos <i class="bi bi-person-hearts"></i></h1>
 
       <div class="container">
         <div class="row">
           @for (treatment of treatments; track treatment.id) {
           <div class="col-md-6">
-            <div class="card mb-3 bg-success-subtle text-primary-emphasis">
+            <div class="card mb-3 bg-danger-subtle text-primary-emphasis">
                 <div class="row no-gutters">
                   <div class="col-md-4">
                     <img src="/assets/img/uñas.png" class="card-img" alt="Placeholder">
