--- a/frontend/src/app/category-list/category-list.component.html
+++ b/frontend/src/app/category-list/category-list.component.html
@@ -7,8 +7,19 @@
           <div class="col-6">
             <div class="card shadow-sm">
               <div class="text-center">
-                <img class="bd-placeholder-img card-img-top" width="100%" height="350"
-              src="/assets/img/uñas.png" >
+
+
+                <a [routerLink]="['/categories', category.id, 'detail']">
+                  @if(category.photoUrl){
+                    <img class="bd-placeholder-img card-img-top" [src] ="'http://localhost:3000/uploads/' + category.photoUrl" >
+                  <!-- } @else {
+                    <img class="bd-placeholder-img card-img-top" src="/assets/img_category/tratamiento.png"> -->
+                  }
+                </a>
+
+
+                <!-- <img class="bd-placeholder-img card-img-top" width="100%" height="350"
+              src="/assets/img/uñas.png" > -->
               </div>
 
               <div class="card-body">
