--- a/frontend/src/app/booking-detail/booking-detail.component.html
+++ b/frontend/src/app/booking-detail/booking-detail.component.html
@@ -1,12 +1,13 @@
-<div class="container mt-5 text-center">
-  <h1 class="mt-5 text-center text-primary-emphasis">Detalles de la reserva <i class="bi bi-card-checklist"></i></h1>
+<div class="container mt-0 ml-0 text-center">
+
   <div class="row">
+    <h1 class="mt-4 mb-4 text-center text-primary-emphasis">Detalles de la reserva <i class="bi bi-card-checklist"></i></h1>
     <div class="col tex-center" style="margin: 5px">
 
       @if (booking) {
-        <div class="card mb-3 bg-success-subtle text-primary-emphasis">
-          <div class="card-body card mb-3 bg-success-subtle text-primary-emphasis">
-            <div class="container mt-5">
+        <div class="card mb-3 bg-danger-subtle text-primary-emphasis">
+          <div class="card-body card mb-3 bg-danger-subtle text-primary-emphasis">
+            <div class="container mt-0 bg-danger-subtle">
               <div class="row">
               <div class="col-4 text-center col-md-4 col-sm-12 text-center">
                 @if (booking.treatment?.image) {
@@ -29,10 +30,10 @@
                 }
                 <button type="button" class="btn btn-outline-info" style="margin: 10px;" [routerLink]="['/booking', booking.id, 'delete']">Cancelar reserva</button>
               </div>
-              <div class="col-8">
+              <div class="col-8 bg-danger-subtle">
                 @if(booking) {
-                  <div class="container px-4 py-5" id="icon-grid">
-                    <h2 class="pb-2 border-bottom">{{booking.treatment?.title}}</h2>
+                  <div class="container bg-danger-subtle" id="icon-grid">
+                    <h2 class="pb-0 border-bottom">{{booking.treatment?.title}}</h2>
                     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-4 py-5">
                       <div class="col d-flex align-items-start">
                         <i
@@ -149,7 +150,7 @@
 <div class="container">
   <div class="row">
       <div class="col-md-6">
-        <h2 class="mt-5">Valoraciones</h2>
+        <h2 class="mt-0">Valoraciones</h2>
         <ul class="list-unstyled">
           @for (comment of comments; track comment.id) {
             <li>
@@ -172,7 +173,7 @@
         </ul>
       </div>
       <div class="col-md-6">
-        <h2 class="mt-5">Añade un comentario</h2>
+        <h2 class="mt-0">Añade un comentario</h2>
         <form [formGroup]="commentsForm" (ngSubmit)="save()">
 
           <div class="mb-3">
@@ -189,7 +190,7 @@
             <label for="opinion">Comentario de texto</label>
           </div>
 
-          <button class="w-100 btn btn-success btn-lg" type="submit">Añadir comentario</button>
+          <button class="w-100 btn btn-success btn-lg mb-4" type="submit">Añadir comentario</button>
         </form>
       </div>
   </div>
