--- a/frontend/src/app/treatment-list/treatment-list.component.html
+++ b/frontend/src/app/treatment-list/treatment-list.component.html
@@ -11,7 +11,10 @@
             <div class="card mb-3 bg-danger-subtle text-primary-emphasis">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/assets/img/uñas.png" class="card-img" alt="Placeholder">
+                    @if (treatment.image) {
+                      <img class="card-img" [src]="'http://localhost:3000/uploads/' + treatment.image" alt="Random first slide" />
+                    }
+
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
