rolan_1 Frontend, user.services eliminado - user-detail_modificado

--- a/frontend/src/app/user-detail/user-detail.component.html
+++ b/frontend/src/app/user-detail/user-detail.component.html
@@ -6,7 +6,7 @@
         <img class="img-fluid" [src]="user.photo" alt="Foto user" />
 
         <div>
-          <button class="btn btn-danger my-2" (click)="deleteUser()">
+          <button class="btn btn-danger my-2" (click)="deleteUser(user)">
             <i class="bi bi-trash"></i> Borrar
           </button>
         </div>
