rolan_1 Frontend mostrar imagen background user en CARDS

--- a/frontend/src/app/user-list/user-list.component.html
+++ b/frontend/src/app/user-list/user-list.component.html
@@ -1,18 +1,19 @@
 
 <div class="container px-4 py-5" id="custom-cards">
-    <h2 class="w-100 btn mi-boton-personalizado btn-lg">Lista de usuarios/as registrados <i class="bi bi-people-fill"></i>
+    <h2 class="w-100 btn mi-boton-personalizado btn-lg fs-4">Lista de usuarios/as registrados <i class="bi bi-people-fill"></i>
     </h2>
   
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
   
       @for (user of users; track user.id) {
         <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('unsplash-photo-1.jpg');">
+          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+          [style.background-image]="'url(' + user.photoUrl + ')'">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
               <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">{{user.fullName}}</h3>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
-                  <button class="btn btn-primary btn-sm" [routerLink]="['/users', user.id, 'detail']">
+                  <button class="btn btn-primary btn-sm fs-5" [routerLink]="['/users', user.id, 'detail']">
                     Ver
                   </button>
                 </li>
