--- a/frontend/src/app/user-detail/user-detail.component.html
+++ b/frontend/src/app/user-detail/user-detail.component.html
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-4 text-center">
       <div class="px-4 py-5">
-        @if (user && user.photo && user.photo.length > 0){
-        <img class="img-fluid" [src]="user.photo" alt="Foto user" />
+        @if (user && user.photoUrl && user.photoUrl.length > 0){
+        <img class="img-fluid" [src]="user.photoUrl" alt="Foto user" />
 
         <div>
           <button class="btn btn-danger my-2" (click)="deleteUser(user)">
