--- a/frontend/src/app/treatment-list/treatment-list.component.css
+++ b/frontend/src/app/treatment-list/treatment-list.component.css
@@ -1,9 +1,9 @@
 .card {
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: #FDEAC2;
   padding: 0px;
 }
 .container {
-  background-color: rgb(255, 234, 243);
+  background-color: whitesmoke;
   padding: 0px;
   margin-top: 0px;
 }
