--- a/frontend/src/app/booking-detail/booking-detail.component.html
+++ b/frontend/src/app/booking-detail/booking-detail.component.html
@@ -1,201 +1,47 @@
-<div class="container mt-0 ml-0 text-center">
-
-  <div class="row">
-    <h1 class="mt-4 mb-4 text-center text-primary-emphasis">Detalles de la reserva <i class="bi bi-card-checklist"></i></h1>
-    <div class="col tex-center" style="margin: 5px">
-
-      @if (booking) {
-        <div class="card mb-3 bg-danger-subtle text-primary-emphasis">
-          <div class="card-body card mb-3 bg-danger-subtle text-primary-emphasis">
-            <div class="container mt-0 bg-danger-subtle">
-              <div class="row">
-              <div class="col-4 text-center col-md-4 col-sm-12 text-center">
-                @if (booking.treatment?.image) {
-                  <ngb-carousel>
-                    @for (image of booking.treatment?.image; track image) {
-                      <ng-template ngbSlide>
-                        <div class="picsum-img-wrapper">
-                          <img [src]="image" alt="Random first slide" />
-                        </div>
-                        <div class="carousel-caption">
-                          <h3>First slide label</h3>
-                          <p>
-                            Nulla vitae elit libero, a pharetra augue mollis
-                            interdum.
-                          </p>
-                        </div>
-                      </ng-template>
-                    }
-                  </ngb-carousel>
-                }
-                @if (showDeletedMessage) {
-                  <ngb-alert type="success" (closed)="closeMessage()" [routerLink]="'/booking'">Reserva cancelada correctamente.</ngb-alert>
-                }
-
-                <button type="button" class="btn btn-outline-info" style="margin: 10px;" (click)="delete(booking)">Cancelar reserva</button>
-              </div>
-              <div class="col-8 bg-danger-subtle">
-                @if(booking) {
-                  <div class="container bg-danger-subtle" id="icon-grid">
-                    <h2 class="pb-0 border-bottom">{{booking.treatment?.title}}</h2>
-                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-4 py-5">
-                      <div class="col d-flex align-items-start">
-                        <i
-                        class="bi bi-file-earmark-person-fill text-info flex-shrink-0 me-3 fs-2"
-                      ></i>
-                      <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis text-center">
-                          Reserva a nombre de:
-                        </h3>
-                        <p>{{booking.user?.fullName}}</p>
-                      </div>
-                      </div>
-                      <div class="col d-flex align-items-start">
-                        <i
-                        class="bi bi-hourglass-split text-info flex-shrink-0 me-3 fs-2"
-                      ></i>
-                      <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis text-center">
-                          Duración
-                        </h3>
-                        <p>{{booking.treatment?.durationInMin}} minutos</p>
-                      </div>
-                      </div>
-                      <div class="col d-flex align-items-start">
-                        <i
-                        class="bi bi-currency-euro text-info flex-shrink-0 me-3 fs-2"
-                      ></i>
-                      <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis">
-                          Precio
-                        </h3>
-                        <p>{{booking.treatment?.price}}€</p>
-                      </div>
-                      </div>
-                      <div class="col d-flex align-items-start">
-                        <i
-                        class="bi bi-arrow-down-circle-fill text-info flex-shrink-0 me-3 fs-2"
-                      ></i>
-                      <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis">
-                          Descuento
-                        </h3>
-                        <p>{{booking.discount}}€</p>
-                      </div>
-                      </div>
-                      <div class="col d-flex align-items-start">
-                        <i
-                        class="bi bi-calendar2-check-fill text-info flex-shrink-0 me-3 fs-2"
-                      ></i>
-                      <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis">
-                          Día de la reserva
-                        </h3>
-                        <p>{{booking.startDate}}</p>
-                      </div>
-                      </div>
-                      <div class="col d-flex align-items-start">
-                        <i
-                        class="bi bi-building-fill text-info flex-shrink-0 me-3 fs-2"
-                      ></i>
-                      <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis">
-                          Centro de belleza
-                        </h3>
-                        <p>{{booking.treatment?.company?.name}}</p>
-                      </div>
-                      </div>
-                      <div class="col d-flex align-items-start">
-                        <i
-                        class="bi bi-building-fill-check text-info flex-shrink-0 me-3 fs-2"
-                      ></i>
-                      <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis">
-                          Dirección
-                        </h3>
-                        <p>{{booking.treatment?.company?.street}}</p>
-                      </div>
-                      </div>
-                      <div class="col d-flex align-items-start">
-                        <i
-                        class="bi bi-clipboard-check-fill text-info flex-shrink-0 me-3 fs-2"
-                      ></i>
-                      <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis">
-                          Descripción del tratamiento
-                        </h3>
-                        <p>{{booking.treatment?.descriptionLong}}</p>
-                      </div>
-                      </div>
-                      <div class="col d-flex align-items-start">
-                        <i
-                        class="bi bi-clipboard2-heart-fill text-info flex-shrink-0 me-3 fs-2"
-                      ></i>
-                      <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis">
-                          Cuidados posteriores
-                        </h3>
-                        <p>{{booking.treatment?.afterCare}}</p>
-                      </div>
-                      </div>
-                    </div>
-                  </div>
-                }
-              </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      }
-
-    </div>
-  </div>
-</div>
 <div class="container">
   <div class="row">
-      <div class="col-md-6">
-        <h2 class="mt-0">Valoraciones</h2>
-        <ul class="list-unstyled">
-          @for (comment of comments; track comment.id) {
-            <li>
-              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
-                <img class="bd-placeholder-img" src="https://placehold.co/100">
-                <div class="col-lg-8">
-                  <h6 class="mb-0">
-                    <ngb-rating [(rate)]="comment.rating" [readonly]="true" [max]="5">
-                      <ng-template let-fill="fill" let-index="index">
-                        <i class="bi-star{{ fill === 100 ? '-fill' : '' }} fs-3" style="color:#ffb900;"></i>
-                      </ng-template>
-                    </ngb-rating>
-                    {{comment.rating | date:'dd/MM/yyyy'}}
-                  </h6>
-                  <small class="text-body-secondary">{{comment.opinion}}</small>
-                </div>
-              </a>
-            </li>
-          }
-        </ul>
+    @if(booking) {
+    <div class="col tex-center mt-5">
+    <div class="reservation-details text-center">
+      <div class="product-image">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+        [style.background-image]="'url(http://localhost:3000/uploads/' + booking?.treatment?.image">
+        @if(booking?.treatment) {
+        <div class="user-info gold-text">
+          <h2>Tu reserva</h2>
+          <p>{{booking?.treatment?.title}}</p>
+        </div>
+        <div class="product-info gold-text">
+          <h2>Centro de belleza</h2>
+          <p>{{booking?.company?.name}}</p>
+        </div>
+        <div class="reservation-info gold-text">
+          <h2>Fecha y Hora de la Reserva</h2>
+          <p>{{booking?.startDate}}</p>
+        </div>
+        <div class="price-info gold-text">
+          <h2>Precio</h2>
+          <p>{{booking?.treatment?.price}}€</p>
+        </div>
+        <button
+                  type="button"
+                  class="btn btn-outline-info"
+                  style="margin: 10px"
+                  (click)="delete(booking)"
+                >
+                  Cancelar reserva
+                </button>
+      }
+        </div>
+
+       <!-- @if(booking?.treatment?.image) {
+        <img class="img-fluid"
+        [src]="'http://localhost:3000/uploads/' + booking?.treatment?.image" alt="Random first slide" />
+        } -->
       </div>
-      <div class="col-md-6">
-        <h2 class="mt-0">Añade un comentario</h2>
-        <form [formGroup]="commentsForm" (ngSubmit)="save()">
 
-          <div class="mb-3">
-            <ngb-rating  formControlName="rating" [max]="5">
-              <ng-template let-fill="fill" let-index="index">
-                <i class="bi-star{{ fill === 100 ? '-fill' : '' }} fs-3" style="color:#780a99;"></i>
-              </ng-template>
-            </ngb-rating>
-          </div>
-
-          <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here"
-            id="opinion" formControlName="opinion" style="min-height:150px;"></textarea>
-            <label for="opinion">Comentario de texto</label>
-          </div>
-
-          <button class="w-100 btn btn-success btn-lg mb-4" type="submit">Añadir comentario</button>
-        </form>
-      </div>
+    </div>
+    </div>
+  }
   </div>
 </div>
