--- a/frontend/src/app/booking-list/booking-list.component.html
+++ b/frontend/src/app/booking-list/booking-list.component.html
@@ -8,7 +8,7 @@
         <div class="row">
           @for (booking of bookings; track booking.id) {
           <div class="col-md-6">
-            <div class="card mb-3 bg-danger-subtle text-primary-emphasis">
+            <div class="card mb-3 text-primary-emphasis">
                 <div class="row no-gutters">
                   <div class="col-md-4">
                     <img src="/assets/img/uñas.png" class="card-img" alt="Placeholder">
