--- a/frontend/src/app/treatment-list/treatment-list.component.html
+++ b/frontend/src/app/treatment-list/treatment-list.component.html
@@ -8,7 +8,7 @@
         <div class="row">
           @for (treatment of treatments; track treatment.id) {
           <div class="col-md-6">
-            <div class="card mb-3 bg-danger-subtle text-primary-emphasis">
+            <div class="card mb-3 text-primary-emphasis">
                 <div class="row no-gutters">
                   <div class="col-md-4">
                     @if (treatment.image) {
