--- a/frontend/src/app/navbar/navbar.component.css
+++ b/frontend/src/app/navbar/navbar.component.css
@@ -1,7 +1,6 @@
 .mi-boton-rc {
-    background-color: rgb(140, 0, 255); /* Color de fondo violeta */
-    color: #ffffff; /* Color del texto blanco */
-    /* Otros estilos según sea necesario */
+    background-color: #CCA831; 
+    color: black;
 }
 .container-fluid {
   background-color: black;
