--- a/frontend/src/app/treatment-detail/treatment-detail.component.html
+++ b/frontend/src/app/treatment-detail/treatment-detail.component.html
@@ -6,9 +6,9 @@
 
       @if (treatment) {
 
-      <div class="card mb-3 bg-danger-subtle text-primary-emphasis">
-        <div class="card-body card mb-0 bg-danger-subtle text-primary-emphasis">
-          <div class="container mt-0 bg-danger-subtle">
+      <div class="card mb-3 text-primary-emphasis">
+        <div class="card-body card mb-0 text-primary-emphasis">
+          <div class="container-fluid mt-0">
             <div class="row">
               <div class="col-4 text-center col-md-4 col-sm-12 text-center">
                 @if (treatment.image) {
@@ -35,9 +35,9 @@
                 }
                 <button type="button" class="btn btn-outline-info" style="margin: 10px;" [routerLink]="['/booking', 'create']">Reservar</button>
               </div>
-              <div class="col-8 bg-danger-subtle">
+              <div class="col-8">
                 @if(treatment){
-                <div class="container bg-danger-subtle" id="icon-grid">
+                <div class="container-fluid" id="icon-grid">
                   <h2 class="pb-0 border-bottom">{{ treatment.title }}</h2>
                   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-4 py-4">
                     <div class="col d-flex align-items-start">
