rolan_1 Frontend user-form angular enviar foto a backend con datos, imagenes de user añadidas

--- a/frontend/src/app/user-detail/user-detail.component.html
+++ b/frontend/src/app/user-detail/user-detail.component.html
@@ -3,7 +3,7 @@
     <div class="col-4 text-center">
       <div class="px-4 py-5">
         @if (user && user.photoUrl && user.photoUrl.length > 0){
-        <img class="img-fluid" [src]="user.photoUrl" alt="Foto user" />
+        <img class="img-fluid" [src]="'http://localhost:3000/uploads/img_user/' + user.photoUrl" alt="author" />
 
         <div>
           <button class="btn btn-danger my-2" (click)="deleteUser(user)">
