rolan_1 Frontend extraer campos userForm y enviarlos al backend en FormData

--- a/frontend/src/app/user-detail/user-detail.component.html
+++ b/frontend/src/app/user-detail/user-detail.component.html
@@ -46,9 +46,9 @@
             <i class="bi bi-calendar-check text-info flex-shrink-0 me-3 fs-2"></i>
             <div>
               <h3 class="mb-0 fs-4 text-body-emphasis">
-                Fecha de Inscripción
+                Fecha de Nacimiento
               </h3>
-              <p>{{ user.registerDate }}</p>
+              <p>{{ user.birthDate }}</p>
             </div>
           </div>
           <div class="col d-flex align-items-start">
