--- a/frontend/src/app/user-form/user-form.component.html
+++ b/frontend/src/app/user-form/user-form.component.html
@@ -41,10 +41,17 @@
                     <input type="checkbox" class="form-check-input" id="active" formControlName="active">
                     <label class="form-check-label" for="active">Usuario activo</label>
                 </div>
-                <div class="form-floating mb-3">
+                <!--
+                    <div class="form-floating mb-3">
                     <input type="datetime-local" class="form-control" id="registerDate" formControlName="registerDate"
                         placeholder="12/07/2024">
                     <label for="registerDate">Día de Inscripción</label>
+                </div>
+                -->
+
+                <div class="form-floating mb-3">
+                    <input type="date" class="form-control" id="birthDate" formControlName="birthDate" placeholder="">
+                    <label for="birthDate">Fecha de nacimiento</label>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="nif" formControlName="nif" placeholder="01234567F">
