--- a/frontend/src/app/user-list/user-list.component.css
+++ b/frontend/src/app/user-list/user-list.component.css
@@ -4,3 +4,7 @@
     color: #ffffff; /* Color del texto blanco */
     /* Otros estilos según sea necesario */
 }
+.card-cover {
+    background-position: center;
+    background-size: cover;
+}
