--- a/frontend/src/app/treatment-list/treatment-list.component.html
+++ b/frontend/src/app/treatment-list/treatment-list.component.html
@@ -2,17 +2,23 @@
   <div class="row">
     <div class="col-12">
 
-      <h1 class="mt-4 mb-4 text-center text-primary-emphasis">Listado de Tratamientos <i class="bi bi-person-hearts"></i></h1>
+      <h1 class="mt-4 mb-4 text-center text-emphasis">Listado de Tratamientos <i class="bi bi-person-hearts"></i></h1>
 
       <div class="container">
         <div class="row">
           @for (treatment of treatments; track treatment.id) {
           <div class="col-md-6">
-            <div class="card mb-3 text-primary-emphasis">
+            <div class="card mb-3 text-emphasis border-dark border-1">
                 <div class="row no-gutters">
                   <div class="col-md-4">
+                    <!--
+                    <div class="col-auto d-none d-lg-block">
+                      <svg class="bd-placeholder-img"  width="200" height="250"
+                      xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: صورة مصغرة" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">صورة مصغرة</text></svg>
+                    </div>
+                  -->
                     @if (treatment.image) {
-                      <img class="card-img" [src]="'http://localhost:3000/uploads/' + treatment.image" alt="Random first slide" />
+                      <img class="card-img left" width="auto" height="180" [src]="'http://localhost:3000/uploads/' + treatment.image" alt="Random first slide" />
                     }
 
                   </div>
