Arreglar user list y detail

--- a/frontend/src/app/user-form/user-form.component.html
+++ b/frontend/src/app/user-form/user-form.component.html
@@ -3,14 +3,19 @@
         <div class="col-lg-8">
 
          
-            <h1 class="mt-5 text-center">Actualizar usuario
-                <i class="bi bi-person-fill"></i>
-            </h1>
+            @if(isUpdate) {
+                <h1 class="mt-5 text-center">Actualizar usuario
+                    <i class="bi bi-person-fill"></i>
+                </h1>
+            } @else {
+                <h1 class="mt-5 text-center">Crear Usuario
+                    <i class="bi bi-person-plus-fill"></i>
+    
+                </h1>
+            }
+           
             
-            <h1 class="mt-5 text-center">Crear Usuario
-                <i class="bi bi-person-plus-fill"></i>
-
-            </h1>
+            
             
 
             <form class="mt.5" [formGroup]="userForm" (ngSubmit)="save()">
