--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -78,8 +78,8 @@
         <li class="nav-item" ngbDropdown>
 					<a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown2" role="button"> Usuarios </a>
 					<div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-end">
-						<a ngbDropdownItem [routerLink]="['/users']" (click)="$event.preventDefault()">Lista de usuarios</a>
-						<a ngbDropdownItem [routerLink]="['/users/:id/create']" (click)="$event.preventDefault()">Crear Usuario</a>
+						<a ngbDropdownItem routerLink="/users" (click)="$event.preventDefault()">Lista de usuarios</a>
+						<a ngbDropdownItem routerLink="/users/create" (click)="$event.preventDefault()">Crear Usuario</a>
 					</div>
 				</li>
         <li class="nav-item">
