Actualizacion colores de fondo a blanco hueso y cards bordeadas

--- a/frontend/src/app/booking-list/booking-list.component.html
+++ b/frontend/src/app/booking-list/booking-list.component.html
@@ -2,13 +2,13 @@
   <div class="row">
     <div class="col-12">
 
-      <h1 class="mt-4 mb-4 text-center text-primary-emphasis">Listado de reservas <i class="bi bi-person-hearts"></i></h1>
+      <h1 class="mt-4 mb-4 text-center text-emphasis">Listado de reservas <i class="bi bi-person-hearts"></i></h1>
 
       <div class="container">
         <div class="row">
           @for (booking of bookings; track booking.id) {
           <div class="col-md-6">
-            <div class="card mb-3 text-primary-emphasis">
+            <div class="card mb-3 text-emphasis border-warning border-1 shadow">
                 <div class="row no-gutters">
                   <div class="col-md-4">
                     <img src="/assets/img/uñas.png" class="card-img" alt="Placeholder">
