--- a/frontend/src/app/treatment-list/treatment-list.component.css
+++ b/frontend/src/app/treatment-list/treatment-list.component.css
@@ -1,9 +1,9 @@
 .card {
-  background-color: whitesmoke;
+  background-color: white;
   padding: 0px;
 }
 .container {
-  background-color: #FDEAC2;
+  background-color: whitesmoke;
   padding: 0px;
   margin-top: 0px;
 }
