--- a/frontend/src/app/treatment-list/treatment-list.component.html
+++ b/frontend/src/app/treatment-list/treatment-list.component.html
@@ -8,7 +8,7 @@
         <div class="row">
           @for (treatment of treatments; track treatment.id) {
           <div class="col-md-6">
-            <div class="card mb-3 text-emphasis border-dark border-1">
+            <div class="card mb-3 text-emphasis border-warning border-1 shadow">
                 <div class="row no-gutters">
                   <div class="col-md-4">
                     <!--
