--- a/frontend/src/app/treatment-detail/treatment-detail.component.css
+++ b/frontend/src/app/treatment-detail/treatment-detail.component.css
@@ -1,9 +1,9 @@
 
 .container {
-  background-color: #FDEAC2;
+  background-color: whitesmoke;
   padding: 0px;
 }
 .card {
-  background-color: whitesmoke;
+  background-color: white;
   padding: 0px;
 }
