enrrutado del boton modificar categorias

--- a/frontend/src/app/category-detail/category-detail.component.html
+++ b/frontend/src/app/category-detail/category-detail.component.html
@@ -13,8 +13,8 @@
 
        <p class="lead mb-4">{{category.name}} tenemos los mejores especialistas </p>
        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Editar</button>
-          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Crear nuevo tratamiento</button>
+          <button type="button" class="btn btn-primary btn-lg px-4 gap-3" [routerLink]="updateUrl">Modificar</button>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Borrar Categoría</button>
 
 
       </div>
